Refactor: Migrate to Jetpack Compose and update UI components
This commit migrates the project to Jetpack Compose and introduces several UI changes:

- Replaces XML layouts with Compose functions for `MainActivity` and related screens.
- Removes old XML layout files, including `activity_main.xml`, `app_bar_main.xml`, `content_main.xml`, and fragment layouts.
- Deletes unused drawable resources, including avatar images and old icon sets.
- Adds new vector drawable icons for navigation items: `ic_beranda_24dp.xml`, `ic_grafik_24dp.xml`, `ic_info_24dp.xml`, `ic_perangkat_24dp.xml`, `ic_server_24dp.xml`, and `ic_settings_24dp.xml`.
- Updates `AndroidManifest.xml` to reflect changes in `MainActivity` and removes the old theme.
- Modifies `.idea/deploymentTargetSelector.xml` by removing an obsolete run configuration.
- Updates `app/build.gradle.kts` to include Compose dependencies (ui, material3, tooling, navigation) and Vico for charts. Removes unused dependencies like recyclerview and constraintlayout.
- Renames `MeteoSenseTheme` to `BpsTheme` in `app/src/main/java/com/example/bps/theme/Theme.kt`.
- `MainActivity` now uses Jetpack Compose for its UI, setting `MenuScreen` as its content.
- Creates `MenuScreen.kt` which implements a Scaffold with a `TopAppBar` and `BottomAppBar` using Compose.
- Updates `gradle/libs.versions.toml` with new dependencies and versions for Compose and Vico.
- Renames the project from "BPS Sicantik Kebumen" to "BPS Kebumen" in `.idea/.name`.
- Removes old string resources and color definitions from `strings.xml` and `colors.xml`.
- Deletes old menu files: `bottom_navigation.xml`, `navigation_drawer.xml`, and `overflow.xml`.
- Removes old theme files: `themes.xml` and `values-night/themes.xml`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,22 @@
 [versions]
 agp = "8.13.0"
-kotlin = "2.0.21"
+kotlin = "2.2.20"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
+navigationCompose = "2.9.4"
 espressoCore = "3.7.0"
 appcompat = "1.7.1"
 material = "1.13.0"
-recyclerview = "1.4.0"
-constraintlayout = "2.2.1"
-lifecycleLivedataKtx = "2.9.3"
-lifecycleViewmodelKtx = "2.9.3"
-navigationFragmentKtx = "2.9.4"
-navigationUiKtx = "2.9.4"
+lifecycleLivedataKtx = "2.9.4"
+lifecycleViewmodelKtx = "2.9.4"
+googleGmsGoogleServices = "4.4.3"
+firebaseDatabase = "22.0.1"
+firebaseFirestore = "26.0.1"
+#credentials = "1.5.0"
+#credentialsPlayServicesAuth = "1.5.0"
+googleid = "1.1.1"
+vico = "2.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -21,15 +25,28 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
-androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
-androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
-androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
+firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
+# androidx-credentials = { group = "androidx.credentials", name = "credentials", version.ref = "credentials" }
+# androidx-credentials-play-services-auth = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentialsPlayServicesAuth" }
+googleid = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleid" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+# For Jetpack Compose.
+vico-compose = { group = "com.patrykandpatrick.vico", name = "compose", version.ref = "vico" }
+
+# For Material 3 theming in Jetpack Compose.
+vico-compose-m3 = { group = "com.patrykandpatrick.vico", name = "compose-m3", version.ref = "vico" }
+
+# For Compose Multiplatform (Android, iOS, desktop).
+vico-multiplatform = { group = "com.patrykandpatrick.vico", name = "multiplatform", version.ref = "vico" }
+
+# For the Android view system.
+vico-views = { group = "com.patrykandpatrick.vico", name = "views", version.ref = "vico" }
 
 [plugins]
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
